$Id$

2010-12-03 Roy Hills <Roy.Hills@nta-monitor.com>

	* Added warning about setting ar$spa to the destination IP address.
	  Suggested by Ed Schaller.

2010-04-25 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added 2.11BSD

2009-08-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, utils.c: Improve handling of --bandwidth and
	  --interval options: Allow either upper or lowercase
	  multiplier letters and give an error if an unknown multiplier
	  character is used.  Previously an unknown multiplier character
	  or one with the wrong case was silently ignored and treated as
	  no multiplier at all.

	* wrappers.c: Change Strtoul and Strtol so they give an error
	  if the underlying function finishes at an unconvertable
	  character other than NULL or whitespace.

	* configure.ac: Added extra warning "-Wwrite-strings" for gcc.

2009-08-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, arp-scan.h, configure.ac, error.c: Rempved syslog
	  functionality as this is not used and has been #ifdef'ed out
	  for some time.

2009-05-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* autoconf.ac: Updated to autoconf 2.61

2009-03-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: Added macros to detect compiler support for
	  -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security.

	* configure.ac: Conditionally enable compiler flags for
	  -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security using
	  the new acinclude.m4 autoconf macros.

	* configure.ac: Incremented version to 1.7.2.

2008-08-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint get-iab get-oui: Replaced "#!/usr/bin/perl" shebang
	  with "#!/usr/bin/env perl" to increase portability.  This allows
	  these perl scripts to work on systems where perl is not installed in
	  /usr/bin, such as NetBSD.

2008-07-26 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Incremented version to 1.7.1.

	* arp-fingerprint: Added NetBSD 4.0, FreeBSD 7.0 and Vista SP1
